few more changes to styles

--- a/src/components/sections/LegalFooter.astro
+++ b/src/components/sections/LegalFooter.astro
@@ -16,6 +16,12 @@ import Container from '../ui/Container.astro';
         <a href="/" class="text-gray-400 hover:text-white transition-colors">
           Home
         </a>
+        <a href="/#features" class="text-gray-400 hover:text-white transition-colors">
+          Features
+        </a>
+        <a href="/#faq" class="text-gray-400 hover:text-white transition-colors">
+          FAQ
+        </a>
         <a href="/terms" class="text-gray-400 hover:text-white transition-colors">
           Terms of Use
         </a>
