--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -88,8 +88,8 @@ import editorDark from '../../assets/screenshots/dark-mode/dark-08-document-edit
 
           <!-- CTA -->
           <div class="relative mb-4 mt-2">
-            <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start items-center">
-              <div class="relative">
+            <div class="flex flex-col gap-4 justify-center lg:justify-start items-center lg:items-start">
+              <div class="relative w-full max-w-lg">
                 <div class="absolute -inset-1 bg-gradient-to-r from-gray-700 to-gray-800 rounded-lg blur opacity-25 animate-pulse"></div>
                 <div class="relative">
                   <EmailSignupForm 
@@ -101,7 +101,7 @@ import editorDark from '../../assets/screenshots/dark-mode/dark-08-document-edit
                   />
                 </div>
               </div>
-              <div class="flex flex-col items-start">
+              <div class="flex flex-col items-center lg:items-start">
                 <p class="text-sm font-semibold text-white">Lifetime deal for early birds</p>
                 <p class="text-xs text-gray-500">Be first to get exclusive offer</p>
               </div>
